screen overflow text fix

--- a/src/scss/_screen.scss
+++ b/src/scss/_screen.scss
@@ -5,22 +5,25 @@
     justify-content: flex-end;
     padding-bottom: 15px;
     align-items: flex-end;
+    text-align: right;
 
     &__previous{
         font-size: 2rem;
         color: #6e6e6e;
-    }
-
-    &__previous--active{
-        font-size: 3rem;
+        word-break: break-all;
     }
 
     &__current{
-        font-size: 3rem;
-        height: 40px;
+        font-size: 4rem;
+        min-height: 40px;
+        word-break: break-all;
     }
+}
 
-    &__current--muted{
-        font-size: 2rem;
+@media(min-width: 800px){
+    .screen{
+        &__current{
+            font-size: 3rem;
+        }
     }
 }
